# robot-simulator

./: CMakeLists.txt  README.md
src/: main.cpp  robot_simulator.cpp
tests/: test_robot_simulator.cpp
tests/test_data/: test1.txt  test2.txt  test3.txt
